# rustfilt

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs  tests.rs
