[package]
name = "rustfilt"
description = "Demangle Rust symbol names"
homepage = "https://github.com/luser/rustfilt"
repository = "https://github.com/luser/rustfilt"
version = "0.1.2-pre"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "Apache-2.0"

[dependencies]
rustc-demangle = "0.1.2"

